nodes/nodepools/journal/assignment-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: namespace-to-nodeselector-journal
  annotations:
    policies.kyverno.io/title: Add nodeSelector and toleration to pods in journal namespaces
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.6.0
spec:
  rules:
  - name: add-nodeselector
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - "journal*"
    mutate:
      patchStrategicMerge:
        spec:
          nodeSelector:
            Project: journal
          tolerations:
          - key: project
            value: "journal"
            operator: "Equal"
            effect: "NoSchedule"
